--- a/WebTools/src/i18n/locales/ru/translations.json
+++ b/WebTools/src/i18n/locales/ru/translations.json
@@ -84,6 +84,7 @@
     "ViewPage.errorMessage": "Что-то пошло чертовски не так. Вероятно мы оказались в зеркальной вселенной.",
     "ViewPage.unnamedStarship": "Безымянный Звездолет",
 
+    "CareerEvents.instruction": "Ваша карьера, это смесь событий и опыта, но только некоторые из них являются поворотными моментами вашей жизни. Определите, какие из них важны в ретроспективе, и то, что казалось решающим для 20 летнего энсина, может оказаться несущественным для того же офицера десятилетия спустя.",
     "CareerEvents.standard": "Стандартное",
     "CareerEvents.standardAndUnofficial": "Стардартное и Неофициальное",
 
@@ -178,11 +179,15 @@
 
     "OtherToolsPage.instruction": "Эта категория содержит несколько дополнительных инструментов которые могут быть использованы в вашей игре.",
 
-    "OtherToolsPage.safetyChecklist.instruction": "\"Согласие\" - представляет собой инструмент, который Мастер может использовать, чтобы помочь игрокам обсудить их личные границы для определенных тем в этой кампании. Этот список разделен на несколько категорий, каждая из которых включает в себя ряд тем. Эта онлайн версия \"списка согласия\" может позволить Мастерам или игрокам обдумать темы и оценить, как они хотят, чтобы эти темы отыгрывались в игре.",
+    "OtherToolsPage.safetyChecklist.instruction": "Этот контрольный списоу представляет собой инструмент, который Мастер может использовать, помогая игрокам обсудить их личные границы для определенных тем в этой кампании. Он разделен на несколько категорий, каждая из которых включает в себя ряд тем. Данная онлайн версия \"списка согласия\" может позволить Мастерам и/или игрокам обдумать темы и оценить, как они хотят, чтобы эти темы отражались в игре.",
 
     "PromotionPage.instruction": "Выберите новый ранг для персонажа",
 
     "ReputationChangePage.instruction": "Измените репутацию персонада в соответствии с обстаятельствами.",
+
+    "SafetyChecklist.instruction": "Этот контрольный список представляет собой инструмент, который Мастер может использовать, чтобы помочь игрокам обсудить их личные границы для определенных тем в этой кампании.\n\n- **Всегда ок**: Означает, что игроку всегда комфортно, когда эта тема описывается, показывается и представлена в игре.\n\n- **Желтая тревога**: Означает, что игрок в целом не против обсуждения темы в игре, но предпочитает, чтобы более яркие описания оставались «за кадром».\n\n- **Красная тревога**: Означает, что игрок не хочет, чтобы эта тема обсуждалась в игре; У игрока может быть любое количество причин для этого. Например возражение против этой темы по моральным принципам, травмирующий личный опыт, неприязнь к упрощению темы в вымышленной развлекательной среде, такой как игра, и так далее. Не спрашивайте, в чем причина такого чувства. Никто не имеет права менять мнение этого игрока. Просто примите эту позицию, уважайте ее и не включайте обсуждаемую тему",
+
+    "SoloCareerEvent.instruction": "Карьера вашего персонажа, это смесь событий и переживаний, но некоторые из них станут поворотными моментами в жизни персонажа. Персонаж определяет, какие моменты его жизни важны в ретроспективе, и то, что казалось решающим для молодого энсина, может оказаться несущественным для того же офицера десятилетия спустя.\n\nУ вашего персонажа есть два определяющих карьерных события, выбранных или определенных случайным образом из списка ниже, и он получает все преимущества, которые они предоставляют.\n\nДля персонажей, выбравших продолжительность карьеры новичка, предположим, что эти карьерные события произошли во время пребывания персонажа в Академии или ее эквиваленте, возможно, во время полевой подготовки на борту звездолета.",
 
     "SoloConstructTypePage.character": "Персонаж",
     "SoloConstructTypePage.instruction": "Вы создаете персонажа или звездолет?",
@@ -427,6 +432,7 @@
     "Page.title.finish": "Заключительные штрихи",
     "Page.title.home": "Домашняя",
     "Page.title.otherTools": "Другие инструменты",
+    "Page.title.safetyChecklist": "Список согласия",
     "Page.title.sectorDetails": "Данные сектора",
     "Page.title.simpleStarship": "Упрощенное создание звездолетов",
     "Page.title.smallCraftStats": "Данные малых кораблей",
@@ -457,7 +463,6 @@
     "Page.title.normalMilestone": "Обычная веха",
     "Page.title.modificationComplete": "Изменения завершены",
     "Page.title.npcConfiguration": "Конфигурация рандомного ВП",
-    "Page.title.safetyChecklist": "Согласие",
     "Page.title.tokenCreationPage": "Создание токена",
     "Page.title.upbringing": "Детали воспитания",
     "Page.title.upbringingDetails": "Направление образование",
@@ -851,9 +856,43 @@
     "Role.admiral.description": "Только флагманы",
     "Role.admiral.ability": "Выберите три дополнительные Специализации, отражающие область знаний или предметы, относящиеся к заданию адмирала. В начале каждой миссии адмирал выбирает одну из трех Специализаций и каждый главный герой получает ее в качестве дополнительного Специализации для миссии, благодаря дополнительным инструктажам и учебным ресурсам.",
 
+    "SafetyEvaluationType.alwaysOk": "Всегда Ок",
+    "SafetyEvaluationType.yellowAlert": "Желтая тревога",
+    "SafetyEvaluationType.redAlert": "Красная тревога",
+
+    "SafetySection.category.dismemberment": "Описания расчленения",
+    "SafetySection.category.gore": "Описание кровавых сцен",
+    "SafetySection.category.massDestructionGenocide": "Описание геноцида или массового уничтожения",
+    "SafetySection.category.harmToAnimals": "Вред животным",
+    "SafetySection.category.harmToChildren": "Вред детям",
+    "SafetySection.category.hateCrimes": "Целенаправленные преступления на почве ненависти, вред представителям меньшинств",
+    "SafetySection.category.traitorMechanicsPvP": "Механика предательства/Игрок против игрока (PvP)",
+    "SafetySection.category.speciesHate": "Целенаправленная ненависть против других расс (Клингоны, Люди и т.п.)",
+    "SafetySection.category.homophobia": "Гомофобия/Трансфобия",
+    "SafetySection.category.racism": "Расизм (внутри своей рассы)",
+    "SafetySection.category.religiousIntolerance": "Религиозная нетерпимость",
+    "SafetySection.category.sexism": "Сексизм",
+    "SafetySection.category.hatefulLanguage": "Целенаправленная вербальная ненависть",
+    "SafetySection.category.entrapment": "Попадание в ловушку, погребение под землей, и т.п.",
+    "SafetySection.category.grief": "Скорбь",
+    "SafetySection.category.imprisonmentRestraint": "Заключение под стражу или ограничение свободы",
+    "SafetySection.category.noPersonalAgency": "Отсуствие свободы воли или способности влиять на события",
+    "SafetySection.category.mentalAbuse": "Психическое насилие или оперантное обусловливание",
+    "SafetySection.category.stranded": "Застрял, позвать на помощь",
+    "SafetySection.category.biologicalWeapons": "Биологическое оружие",
+    "SafetySection.category.desecrationOfBodies": "Осквернение тел",
+    "SafetySection.category.execution": "Казнь",
+    "SafetySection.category.forcedScientificExperiments": "Научные эксперементы с принуждением",
+    "SafetySection.category.murderOfNonCombatants": "Убийство непричастных",
+    "SafetySection.category.torture": "Пытки",
+
     "SafetySectionType.violence": "Насилие",
     "SafetySectionType.gameplayMechanics": "Игровая механика",
+    "SafetySectionType.hatred": "Ненависть",
+    "SafetySectionType.helplessness": "Беспомощность",
     "SafetySectionType.warCrimes": "Военные преступления",
+
+    "ServiceRecord.agingRelic": "Старящая Реликвия",
 
     "Sheet.basicGeneratedHalfPageCharacterSheet": "Новый бланк персонажа 2го издания пол листа",
     "Sheet.generatedTngPortraitCharacterSheet": "Портретный бланк персонажа TNG (US-Letter)",
@@ -1108,27 +1147,27 @@
 
     "Talent.cautiousCommand": "Предусмотрительный: Коммандование",
 
-    "Talent.cautiousCommand.description": "Если привыполнении Задачи с применением этого Коммандования приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
+    "Talent.cautiousCommand.description": "Если при выполнении Задачи с применением этого Коммандования приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
 
     "Talent.cautiousConn": "Предусмотрительный: Навигация",
 
-    "Talent.cautiousConn.description": "Если привыполнении Задачи с применением этого Навигации приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
+    "Talent.cautiousConn.description": "Если при выполнении Задачи с применением этого Навигации приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
 
     "Talent.cautiousEngineering": "Предусмотрительный: Инженерия",
 
-    "Talent.cautiousEngineering.description": "Если привыполнении Задачи с применением этого Инженерии приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
+    "Talent.cautiousEngineering.description": "Если при выполнении Задачи с применением этого Инженерии приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
 
     "Talent.cautiousMedicine": "Предусмотрительный: Медицина",
 
-    "Talent.cautiousMedicine.description": "Если привыполнении Задачи с применением этого Медицины приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
+    "Talent.cautiousMedicine.description": "Если при выполнении Задачи с применением этого Медицины приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
 
     "Talent.cautiousScience": "Предусмотрительный: Наука",
 
-    "Talent.cautiousScience.description": "Если привыполнении Задачи с применением этого Науки приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
+    "Talent.cautiousScience.description": "Если при выполнении Задачи с применением этого Науки приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
 
     "Talent.cautiousSecurity": "Предусмотрительный: Безопасность",
 
-    "Talent.cautiousSecurity.description": "Если привыполнении Задачи с применением этого Безопасности приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
+    "Talent.cautiousSecurity.description": "Если при выполнении Задачи с применением этого Безопасности приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
 
     "Talent.cloakingDevice": "Маскировочное устройство",
 
