additional 2nd edition rules for supervisory characters

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -395,6 +395,7 @@
     "Construct.other.focus1": "Fokus 1",
     "Construct.other.focus2": "Fokus 2",
     "Construct.other.focus3": "Fokus 3",
+    "Construct.other.focus4": "Fokus 4",
     "Construct.other.focuses": "Fokusse",
     "Construct.other.job": "Tätigkeit",
     "Construct.other.missionProfile": "Missionsprofil",
