--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -396,8 +396,10 @@
     "SupportingCharacter.whatPurpose": "Determine what purpose the Supporting Character will fill. Are they an engineer, or a doctor, or a scientist, or a security officer?",
     "SupportingCharacter.speciesAndAttributes": "Species & Attributes",
     "SupportingCharacter.speciesAndAttributesInstruction": "Assign Attribute scores and choose the character's species. The chosen species will affect the final Attribute scores. Select two different values to swap them.",
+    "SupportingCharacter.supervisoryNote": "Supervisory supporting characters represent department heads or, in the caes of _Lower Decks_ campaigns, senior officers who outrank the players.",
     "SupportingCharacter.disciplineInstruction": "Assign the character's Disciplines. The highest value should match up with the department/purpose of the character. Select two different values to swap them.",
     "SupportingCharacter.focusInstruction": "Choose three Focuses for the character. At least one should reflect the department/purpose of the character.",
+    "SupportingCharacter.valueInstruction": "Supervisory characters start with a single value.",
     "SupportingCharacter.nameAndRank": "Name & Rank",
     "SupportingCharacter.nameAndRankInstruction": "Give the character an appropriate name and rank. Supporting Characters should never have a rank above Lieutenant and may often be enlisted personnel rather than officers.",
     "SupportingCharacter.numericalValue": "Value",
@@ -481,6 +483,7 @@
     "Construct.other.focus1": "Focus 1",
     "Construct.other.focus2": "Focus 2",
     "Construct.other.focus3": "Focus 3",
+    "Construct.other.focus4": "Focus 4",
     "Construct.other.focuses": "Focuses",
     "Construct.other.house": "House",
     "Construct.other.injuries": "Injuries",
@@ -517,6 +520,7 @@
     "Construct.other.starshipType": "Starship Type",
     "Construct.other.stats": "Stats",
     "Construct.other.stress": "Stress",
+    "Construct.other.supervisory": "Supervisory",
     "Construct.other.systems": "Systems",
     "Construct.other.talent": "Talent",
     "Construct.other.talents": "Talents",
