--- a/WebTools/src/i18n/locales/es/translations.json
+++ b/WebTools/src/i18n/locales/es/translations.json
@@ -465,6 +465,7 @@
     "Construct.other.focus1": "Especialidad 1",
     "Construct.other.focus2": "Especialidad 2",
     "Construct.other.focus3": "Especialidad 3",
+    "Construct.other.focus4": "Especialidad 4",
     "Construct.other.focuses": "Especialidades",
     "Construct.other.house": "Casa",
     "Construct.other.injuries": "Heridas",
