--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -433,6 +433,7 @@
     "Construct.other.focus1": "Spécialité 1",
     "Construct.other.focus2": "Spécialité 2",
     "Construct.other.focus3": "Spécialité 3",
+    "Construct.other.focus4": "Spécialité 4",
     "Construct.other.focuses": "Spécialités",
     "Construct.other.injuries": "Blessures",
     "Construct.other.job": "Travail",
