--- a/WebTools/src/i18n/locales/ru/translations.json
+++ b/WebTools/src/i18n/locales/ru/translations.json
@@ -349,6 +349,7 @@
     "Construct.other.focus1": "Специализация 1",
     "Construct.other.focus2": "Специализация 2",
     "Construct.other.focus3": "Специализация 3",
+    "Construct.other.focus4": "Специализация 4",
     "Construct.other.focuses": "Специализации",
     "Construct.other.injuries": "Ранения",
     "Construct.other.job": "Работа",
