--- a/WebTools/src/i18n/locales/pt-BR/translations.json
+++ b/WebTools/src/i18n/locales/pt-BR/translations.json
@@ -466,6 +466,7 @@
     "Construct.other.focus1": "Foco 1",
     "Construct.other.focus2": "Foco 2",
     "Construct.other.focus3": "Foco 3",
+    "Construct.other.focus4": "Foco 4",
     "Construct.other.focuses": "Focos",
     "Construct.other.house": "Casa",
     "Construct.other.injuries": "Ferimentos",
